--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -449,3 +449,9 @@ span.summary-page__subhead_claim--br{
 .br__proof--me{
     
 }
+
+.br__diagram-intro--copy, .br__diagram-intro--copy2{
+    @include mq("tablet-wide"){
+        display: none;
+    }
+}
