--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -65,19 +65,19 @@ $zindex-tooltip:                    1070 !default; */
         grid-color   : blue,
     ),
     90em: ( // 1440px
-        font-size    : 9,
+        font-size    : 9px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
     ),
     118em: ( // 1920px
-        font-size    : 10,
+        font-size    : 9px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : purple,
     ),
     160rem: ( // 2560px
-        font-size    : 16,
+        font-size    : 16px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
