--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
@@ -20,9 +20,12 @@ $breakpoints: (
   "tablet-wide":    64em, 
   "desktop":        78em, 
   "desktop-wide":   90em, 
-  "desktop-xl":     118em, 
-  "desktop-xxl":    160em
+  "desktop-hd":     118em, 
+  "desktop-uhd":    160em
   );
+
+
+
 
 
 //example
