--- a/wp-content/themes/understrap-child/sass/theme/partials/_responsive_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_responsive_styles.scss
@@ -7,5 +7,5 @@
 @include mq('tablet-wide'){}
 @include mq('desktop'){}
 @include mq('desktop-wide'){}
-@include mq('desktop-xl'){}
-@include mq('desktop-xxl'){}
+@include mq('desktop-hd'){}
+@include mq('desktop-uhd'){}
