--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
@@ -43,8 +43,8 @@ padding-right: 0px; */
 // max-width: 78.5%; */
 // 	}	
 // 	@include mq('desktop-wide'){}	
-// 	@include mq('desktop-xl'){}	
-// 	@include mq('desktop-xxl'){}	
+// 	@include mq('desktop-hd'){}	
+// 	@include mq('desktop-uhd'){}	
 // }
 
 
