--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_font_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_font_variables.scss
@@ -9,8 +9,8 @@ tablet:        768px,
 tablet-wide:   1024px,
 desktop:       1248px,
 desktop-wide:  1440px,
-desktop-xl:    1920px,
-desktop-xxl:   2560px
+desktop-hd:    1920px,
+desktop-uhd:   2560px
 ); */
 
 $font-family-sans-serif:    geomanist, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
