--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -126,7 +126,7 @@ display: none;
     display: block;
 }
 
-#stats-slider>.carousel-inner.three-up-carousel{
+.three-up-carousel{
     display: none;
 }
 @include mq('phone') {
@@ -158,7 +158,10 @@ display: none;
 }
 
 @include mq('tablet-wide') {
-    .objectives-diagram__vertical--delta {
+   .three-up-carousel{
+display: flex;
+   }
+   .objectives-diagram__vertical--delta {
 display: none;
     }
     .objectives-diagram__horizontal--delta {
@@ -193,9 +196,9 @@ display: none;
 #stats-slider>.carousel-inner.one-up-carousel{
     display: none;
 }
-#stats-slider>.carousel-inner.three-up-carousel{
-    display: block;
-}
+// .three-up-carousel{
+//     display: block;
+// }
 
 }
 
@@ -209,10 +212,10 @@ display: none;
 @include mq('desktop-wide') {
 }
 
-@include mq('desktop-xl') {
+@include mq('desktop-hd') {
 }
 
-@include mq('desktop-xxl') {
+@include mq('desktop-uhd') {
 }
 
 
@@ -433,7 +436,7 @@ span.summary-page__subhead_claim--br{
 }
 
 .mobile__background--image {
-    @include mq('desktop-xl') {
+    @include mq('desktop-hd') {
         display: none;
     }
 
@@ -451,6 +454,18 @@ span.summary-page__subhead_claim--br{
 }
 
 .br__diagram-intro--copy, .br__diagram-intro--copy2{
+    @include mq("tablet-wide"){
+        display: none;
+    }
+}
+
+.br__outcomes--diagram{
+    @include mq("tablet-wide"){
+        display: none;
+    }
+}
+
+.br__modernize--diagram{
     @include mq("tablet-wide"){
         display: none;
     }
